<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="locator_url">https://locator.popular.com/?lang=en</string>
    <string name="privacy_policy_url">https://www.popular.com/en/privacy#GA=BPPR_Privacy</string>
    <string name="not_available_url">https://mobile.bancopopular.com/cibp-web/actions/mobileSwitch?target=login&amp;version=classic&amp;lang=en</string>
    <string name="account_blocked_regain_access_url">https://mobile.bancopopular.com/cibp-web/actions/mobileSwitch?target=resetpassword&amp;version=classic&amp;lang=en</string>
    <string name="base_remote_deposit_instructions_url">https://apps.popular.com/mobile/deposito-facil.php?t=%1$s&amp;l=en</string>
    <string name="remote_deposit_instructions_url">https://apps.popular.com/mobile/deposito-facil/ING.html</string>
    <string name="athm_website_url">https://www.athmovil.com</string>
    <string name="athm_forgot_password_url">https://www.athmovil.com/web/forgotPassword.htm?language=en</string>
    <string name="athm_terms_and_conditions_url">https://apps.popular.com/mobile/terms/ath-movil/en.html</string>
    <string name="athm_institutions_url">https://apps.popular.com/mobile/ath-movil/participantes-en.html</string>
    <string name="help_section_url">https://helpcenter.popular.com/?p=590&amp;lang=en</string>
    <string name="default_notification_channel_id" translatable="false">fcm_fallback_notification_channel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_phrase">Continue</string>
    <string name="welcome">HELLO!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Loading…</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>
    <string name="today">Today</string>
    <string name="logout_app">Logout from current session?</string>
    <string name="title_exit">Exit</string>
    <string name="zero_amount">$0.00</string>
    <string name="title_logout_app">Logout</string>
    <string name="logging_out">Logging out…</string>
    <string name="not_available">N/A</string>
    <string name="confirm">Confirm</string>
    <string name="locator">Locator</string>
    <string name="atm">ATM</string>
    <string name="branches_tab">Branches</string>
    <string name="branch">BRANCH</string>
    <string name="map">Map</string>
    <string name="my_location_error">An error occurred while trying to retrieve your location.</string>
    <string name="my_location_permission">Please accept the location permission.</string>
    <string name="try_locate">Trying to establish current user location…</string>
    <string name="guide_me">Guide me</string>
    <string name="locating">Locating…</string>
    <string name="locator_services_unavailable">Enable location services to get information about your current location.</string>
    <string name="location_unavailable">Location unavailable.</string>
    <string name="branch_singular">Branch</string>
    <string name="branch_plural">Branches</string>
    <string name="atm_singular">ATM</string>
    <string name="atm_plural">ATMs</string>
    <string name="and">and</string>
    <string name="miles_away">miles away</string>
    <string name="miles">miles</string>
    <string name="current_location">Current location</string>
    <string name="remember_username">Remember Username</string>
    <string name="remember_device">Remember Device?</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="login">Log in</string>
    <string name="select_username">Select Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="other_username">+ Other Username</string>
    <string name="other_username_header">Other Username</string>
    <string name="answer">Answer</string>
    <string name="logout">Log out</string>
    <string name="enter_valid_username">Invalid username</string>
    <string name="enter_answer">Invalid answer</string>
    <string name="enter_valid_answer">Invalid answer</string>
    <string name="enter_valid_password">Your password was incorrect.\n\nRemember that your password may have:\n\n&#8226; Capital letters\n&#8226; Numbers \n&#8226; Special characters</string>
    <string name="title_security_question">Question</string>
    <string name="security_question">Security Question Answer</string>
    <string name="no_more_users">There aren\'t any remembered users</string>
    <string name="confirm_delete_user">Do you really want to delete this user?</string>
    <string name="forget_user">Forget</string>
    <string name="ebills">e-Bills</string>
    <string name="ebill_date">Date</string>
    <string name="ebill_due_date">due</string>
    <string name="ebills_choose_amount_text" formatted="false" tools:ignore="StringFormatInvalid">%s has a minimum payment of %s. Balance due is %s.</string>
    <string name="ebills_pay">Pay %s</string>
    <string name="ebills_header">EBILLS</string>
    <string name="deposit">Deposit</string>
    <string name="pay">Pay</string>
    <string name="payment_verb">Send Payment</string>
    <string name="transfer_verb">Transfer</string>
    <string name="transfer_verb_button">Make Transfer</string>
    <string name="from">From</string>
    <string name="from_colon">From:</string>
    <string name="to">To</string>
    <string name="to_colon">To:</string>
    <string name="on">On</string>
    <string name="payment_processed">Payment processed</string>
    <string name="pay_now">Pay Now</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="schedule_payment">Schedule payment</string>
    <string name="schedule_transfer">Schedule transfer</string>
    <string name="on_payment">on\u0020</string>
    <string name="transfer_processed">Transfer processed</string>
    <string name="your_receipt_nr_is">Your receipt number is:</string>
    <string name="from_title">FROM</string>
    <string name="to_title">TO</string>
    <string name="amount">Amount</string>
    <string name="amount_colon">Amount:</string>
    <string name="amount_title">AMOUNT</string>
    <string name="date">Date:</string>
    <string name="confirm_your_payment">Confirm your payment</string>
    <string name="confirm_your_transfer">Confirm your transfer</string>
    <string name="close">Close</string>
    <string name="save_to_gallery">Save to gallery?</string>
    <string name="receipt">receipt</string>
    <string name="transfer_noun">transfer</string>
    <string name="payment_noun">payment</string>
    <string name="rdc_noun">remote deposit</string>
    <string name="refreshing_balances">Refreshing Balance…</string>
    <string name="loading_payments">Loading Payments…</string>
    <string name="loading_transfers">Loading Transfers…</string>
    <string name="processing_transaction">Processing…</string>
    <string name="transfer_future">Transfer on \u0020</string>
    <string name="athm_registration_information_header">ATH&#174; MÓVIL REGISTRATION INFORMATION</string>
    <string name="athm_username_hint">Username</string>
    <string name="athm_password_hint">Password</string>
    <string name="athm_confirm_password_hint">Confirm Password</string>
    <string name="athm_login_information_header">ATH&#174; MÓVIL LOGIN INFORMATION</string>
    <string name="athm_enter_login_password">Enter your ATH&#174; Móvil username and password.</string>
    <string name="athm_forgot_username_or_password">Forgot username or password?</string>
    <string name="athm_phone_number_header">MOBILE PHONE NUMBER</string>
    <string name="athm_phone_number_hint">Enter Phone Number</string>
    <string name="athm_select_provider_hint">Select Provider</string>
    <string name="athm_phone_number_info">To use this service you must enter the mobile phone number you want to use in ATH&#174; Móvil.</string>
    <string name="athm_password_guidelines">8&#8211;15 characters. Combination of letters, numbers, AND a capital letter are required. Special characters are optional</string>
    <string name="title_none_of_the_codes">NONE OF THE CODES</string>
    <string name="text_nearest_branch">If you don\'t have access to your primary phone number, alternate number or recovery code, you must visit any of our branches so that we may assist you in deactivating 2 Step Verification for your account.</string>
    <string name="submit_nearest_branch">Find the nearest branch</string>
    <string name="text_contact_call">If you have any questions, contact the Mi Banco Help-Desk at (787) 724&#8211;3655 or 1&#8211;888&#8211;724&#8211;3655 (United States / Virgin Islands).</string>
    <string name="submit_call_now">Call now</string>
    <string name="cashdrop_welcome_client_instr">To access Mobile Withdrawal please provide your phone number and service provider.</string>
    <string name="cashdrop_welcome_personal_info">PERSONAL INFORMATION</string>
    <string name="cashdrop_welcome_personal_name_hint">Name</string>
    <string name="cashdrop_welcome_personal_lastname_hint">Last Name</string>
    <string name="cashdrop_welcome_access_info">ACCESS INFORMATION</string>
    <string name="cashdrop_welcome_access_email_hint">E-mail</string>
    <string name="cashdrop_welcome_access_phonenumber_hint">Phone number</string>
    <string name="cashdrop_welcome_access_provider">Provider</string>
    <string name="cashdrop_welcome_disclaimer">
        Banco Popular will not charge your bank account or mobile phone account for this service. You should see your service provider\'s
        contract for details regarding charges for text messages.
        These charges depend on your service provider and the text message service plan you have acquired.
    </string>
    <string name="permission_info_description">Mi Banco Mobile will only request permissions and necessary personal data for the use of the application. It’s important that you know how we collect and use your data and how you can control or restrict it.
        Popular uses this information to provide a better user experience, improve our services and protect your information. Some of the permissions and data we request include:</string>
    <string name="permission_info_phone_title">Phone permissions:</string>
    <string name="permission_info_storage_title">Media and Storage permissions:</string>
    <string name="permission_info_contact_title">Contact permissions:</string>
    <string name="permission_info_notification_title">Notification permissions:</string>
    <string name="permission_info_phone_description">Offer and improve customer experience and for security purposes. We also use your phone number in the following services: 2 Step Verification, Mi Banco Alerts and for sending and receiving cash with Mobile Withdrawal.</string>
    <string name="permission_info_storage_description">Improve customer experience, personalization, and receipt storage.</string>
    <string name="permission_info_contact_description">Facilitate sending cash to your contacts with Mobile Withdrawal.</string>
    <string name="permission_info_notification_description">Receive push notifications from our app, including Mi Banco Alerts service.</string>
    <string name="permission_info_policy">Access our &lt;a href=https://www.popular.com/en/privacy/>Privacy Policy&lt;/a> to learn how we protect your personal information.</string>
    <string name="permission_info_button">AGREE</string>
    <string name="permission_info_button_cancel">CANCEL</string>
    <string name="menu_nav_accounts">Accounts</string>
    <string name="menu_nav_payments">Payments</string>
    <string name="menu_nav_transfers">Transfers</string>
    <string name="menu_nav_ath_movil">ATH Movil</string>
    <string name="menu_nav_more">More</string>
</resources>