<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_accounts_icons"
            android:icon="@drawable/accounts_icons"
            android:title="@string/menu_nav_accounts" />
        <item
            android:id="@+id/nav_payments_icons"
            android:icon="@drawable/payments_icons"
            android:title="@string/menu_nav_payments" />
        <item
            android:id="@+id/nav_transfer_icon"
            android:icon="@drawable/transfer_icon"
            android:title="@string/menu_nav_transfers" />
        <item
            android:id="@+id/nav_ath_icon"
            android:icon="@drawable/ath_icon"
            android:title="@string/menu_nav_ath_movil" />
        <item
            android:id="@+id/nav_more_icon"
            android:icon="@drawable/more_icon"
            android:title="@string/menu_nav_more" />
</menu>


