<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <include layout="@layout/athm_registration_step_4" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/athm_registration_information_header" />

        <LinearLayout
            style="@style/HeaderSeparator"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/athm_username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/athm_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/athm_confirm_password_hint"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/athm_password_guidelines"
            android:textColor="@color/grey"
            android:id="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnContinue"
                style="@style/Button.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_phrase"
                android:theme="@style/Button.Blue" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/Button.Grey" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>