<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"
            android:text="@string/cashdrop_welcome_client_instr"
            android:id="@+id/txtEnrollmentWelcome"
            android:textColor="@color/black_54" />

        <TextView
            style="@style/HeaderText"
            android:id="@+id/header_personal_info"
            android:text="@string/cashdrop_welcome_personal_info" />

        <LinearLayout
            style="@style/HeaderSeparator"
            android:id="@+id/line_separator_pi"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/cashdrop_welcome_personal_name_hint"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/cashdrop_welcome_personal_lastname_hint"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"/>



        <TextView
            style="@style/HeaderText"
            android:text="@string/cashdrop_welcome_access_info"
            android:id="@+id/header_access_info"/>

        <LinearLayout
            style="@style/HeaderSeparator"
            android:id="@+id/line_separator_ai"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/cashdrop_welcome_access_email_hint"
            android:maxLength="60"
            android:maxLines="1"
            android:inputType="textWebEmailAddress"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/cashdrop_welcome_access_phonenumber_hint"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionDone"/>

        <com.qburst.android.widget.spinnerextended.SpinnerExtended
            android:id="@+id/spinnerProvider"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:spinnerHint="@string/cashdrop_welcome_access_provider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/cashdrop_welcome_disclaimer"
            android:textColor="@color/black_54" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnContinue"
                style="@style/Button.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/continue_phrase"
                android:theme="@style/Button.Blue" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>