<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <include layout="@layout/athm_registration_step_1" />

        <TextView
            style="@style/HeaderText"
            android:text="@string/athm_phone_number_header" />

        <LinearLayout
            style="@style/HeaderSeparator"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/athm_phone_number_hint"
            android:maxLength="10"
            android:inputType="phone"
            android:digits="1234567890"/>

        <com.qburst.android.widget.spinnerextended.SpinnerExtended
            android:id="@+id/spinnerProvider"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:spinnerHint="@string/athm_select_provider_hint" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/athm_phone_number_info"
        android:textColor="@color/black_54" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnContinue"
                style="@style/Button.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/continue_phrase"
                android:theme="@style/Button.Blue" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/Button.Grey" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>